--- a/covidMyths/front/package.json
+++ b/covidMyths/front/package.json
@@ -32,6 +32,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
