--- a/covidMyths/package.json
+++ b/covidMyths/package.json
@@ -11,6 +11,7 @@
     "heroku-postbuild": "cd front && yarn install && yarn run build"
   },
   "dependencies": {
+    "concurrently": "^5.2.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -20,7 +21,9 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^3.5.7",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "react-scripts": "^3.4.1",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
