--- a/covidMyths/package.json
+++ b/covidMyths/package.json
@@ -11,6 +11,7 @@
     "heroku-postbuild": "cd front && yarn install && yarn run build"
   },
   "dependencies": {
+    "concurrently": "^5.2.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
