--- a/covidMyths/package.json
+++ b/covidMyths/package.json
@@ -22,6 +22,8 @@
     "jade": "~1.11.0",
     "mongodb": "^3.5.7",
     "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react-scripts": "^3.4.1",
     "request": "^2.88.2"
   },
