--- a/covidMyths/package.json
+++ b/covidMyths/package.json
@@ -11,7 +11,9 @@
     "heroku-postbuild": "cd front && yarn install && yarn run build"
   },
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "concurrently": "^5.2.0",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
