--- a/covidMyths/.env
+++ b/covidMyths/.env
@@ -1,2 +1,5 @@
 MONGODB_URI=mongodb://localhost:27017
 SECRETKEY=jn8HAskj9DN
+APIKEY=11c85b7f6c6f4f2594a793eea57c096b
+APIURL=http://newsapi.org/v2/everything
+DB=covidDB
