--- a/covidMyths/package.json
+++ b/covidMyths/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "^0.0.3",
+    "bootstrap": "^4.4.1",
     "concurrently": "^5.2.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
@@ -26,7 +27,9 @@
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "react-bootstrap": "^1.0.1",
     "react-scripts": "^3.4.1",
+    "reactjs-popup": "^1.5.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
@@ -35,5 +38,5 @@
     "eslint-plugin-react": "^7.19.0",
     "nodemon": "^2.0.3"
   },
-  "proxy":"http//localhost:3001"
+  "proxy": "http//localhost:3001"
 }
