--- a/covidMyths/package.json
+++ b/covidMyths/package.json
@@ -30,7 +30,8 @@
     "react-bootstrap": "^1.0.1",
     "react-scripts": "^3.4.1",
     "reactjs-popup": "^1.5.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "ws": "^7.3.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
