--- a/front/package.json
+++ b/front/package.json
@@ -35,8 +35,10 @@
     ]
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^1.1.5",
     "eslint": "^6.8.0",
-    "eslint-plugin-react": "^7.19.0"
+    "eslint-plugin-react": "^7.19.0",
+    "jest": "^26.0.1"
   },
   "proxy": "http://localhost:3001"
 }
