--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "server": "nodemon ./bin/www",
     "client": "cd front && yarn start",
     "dev": "concurrently \"yarn run server\" \"yarn run client\"",
-    "heroku-postbuild": "cd front && yarn install && yarn run build"
+    "heroku-postbuild": "cd front && yarn install && yarn run build",
+    "test": "jest"
   },
+  "preset": "@shelf/jest-mongodb",
   "dependencies": {
+    "animate.css": "^4.1.0",
     "bcrypt": "^4.0.1",
     "bootstrap": "^4.4.1",
     "concurrently": "^5.2.0",
@@ -32,6 +35,8 @@
     "reactjs-popup": "^1.5.0",
     "request": "^2.88.2",
     "sweetalert2": "^9.10.12",
+    "ts-jest": "^26.0.0",
+    "wowjs": "^1.1.3",
     "ws": "^7.3.0"
   },
   "devDependencies": {
